# manleylifting

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  db.sqlite3
backend/api/: admin.py  audit.py  auth_backends.py  auth_cookies.py  auth_views.py  middleware.py  models.py  portal_views.py  serializers.py  tests.py  throttles.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_pendingcheckout_status_token.py  0003_processedwebhookevent.py  0004_onsiteorder_processedstripeevent.py  0005_catalogcollection_catalogproduct.py  0006_rename_legacy_shopify_fields.py  0007_company_equipment_inspectionreport_certificate_and_more.py  0008_update_inspection_report_statuses.py  0009_equipment_decommissioned_at_alter_equipment_status.py  0010_reportimage.py  0011_alter_userprofile_role.py  0012_userprofile_required_password_change.py  0013_auditlog.py  0014_inspectionreport_checklist_items.py  0015_certificate_soft_delete.py  0016_rename_api_certifi_company_454d1c_idx_api_certifi_company_282caa_idx_and_more.py  0017_inspectionreport_soft_delete.py  0018_site_and_equipment_site.py  0019_rename_api_equipme_compan_95d5d7_idx_api_equipme_company_817c7b_idx_and_more.py  0020_reportimage_checklist_label.py  0021_certificate_site.py  0022_equipment_safe_working_load.py
backend/backend/: settings.py  urls.py
docs/: customer-portal-uat.md  prospective-owner-handout.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
(+51 files in other folders)
