[project]
name = "manleylifting"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "stripe>=11.6.0",
    "whitenoise>=6.12.0",
]
