[project]
name = "manleylifting"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-redis>=7.0.0",
    "django-storages[s3]>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.4.0",
    "gunicorn>=26.0.0",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "reportlab>=4.2.2",
    "stripe>=11.6.0",
    "whitenoise>=6.12.0",
]
